# obs-pngtuber

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
src/: CMakeLists.txt  plugin-main.c  plugin-support.c.in  plugin-support.h  pngtuber.c
src/data/locale/: en-US.ini
